[gd_scene load_steps=19 format=3 uid="uid://ccimibjnkpig8"]

[ext_resource type="Script" uid="uid://doqeqglwp0ok" path="res://scripts/mochir.gd" id="1_o2gwu"]
[ext_resource type="Texture2D" uid="uid://boqpc2qe4bksg" path="res://assets/Sprite Pack 2/2 - Mr. Mochi/Hurt (32 x 32).png" id="2_2l70p"]
[ext_resource type="Texture2D" uid="uid://b1c7sdgmqyl3s" path="res://assets/Sprite Pack 2/2 - Mr. Mochi/Idle (32 x 32).png" id="3_o2gwu"]
[ext_resource type="Texture2D" uid="uid://qdbl34j46785" path="res://assets/Sprite Pack 2/2 - Mr. Mochi/Jumping (32 x 32).png" id="4_inqrw"]
[ext_resource type="Texture2D" uid="uid://cru0bx4evos67" path="res://assets/Sprite Pack 2/2 - Mr. Mochi/Running (32 x 32).png" id="5_vvyfy"]
[ext_resource type="AudioStream" uid="uid://de28708bliwti" path="res://sounds/jump_sfx.wav" id="6_2l45l"]

[sub_resource type="AtlasTexture" id="AtlasTexture_85wsy"]
atlas = ExtResource("2_2l70p")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2l45l"]
atlas = ExtResource("3_o2gwu")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxuk7"]
atlas = ExtResource("3_o2gwu")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ro0r"]
atlas = ExtResource("4_inqrw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_scqyq"]
atlas = ExtResource("5_vvyfy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpat3"]
atlas = ExtResource("5_vvyfy")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5ylh"]
atlas = ExtResource("5_vvyfy")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlk0g"]
atlas = ExtResource("5_vvyfy")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gxuk7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_85wsy")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2l45l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxuk7")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ro0r")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_scqyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpat3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5ylh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlk0g")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}, {
"frames": [],
"loop": true,
"name": &"swing",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6ro0r"]
radius = 6.0
height = 14.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_scqyq"]
size = Vector2(16, 14.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hpat3"]
size = Vector2(8, 6)

[node name="player" type="CharacterBody2D"]
collision_mask = 94
script = ExtResource("1_o2gwu")

[node name="anim" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -9)
sprite_frames = SubResource("SpriteFrames_gxuk7")
animation = &"run"
autoplay = "idle"

[node name="animator" type="AnimationPlayer" parent="."]

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_6ro0r")

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="collision" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(0, -1.25)
shape = SubResource("RectangleShape2D_scqyq")
debug_color = Color(0.991963, 0, 0.258549, 0.42)

[node name="remote" type="RemoteTransform2D" parent="."]
remote_path = NodePath("..")

[node name="ray_right" type="RayCast2D" parent="."]
position = Vector2(8, -4)
target_position = Vector2(4, 0)
collision_mask = 4
hit_from_inside = true

[node name="ray_left" type="RayCast2D" parent="."]
position = Vector2(-8, -4)
target_position = Vector2(-4, 0)
collision_mask = 4
hit_from_inside = true

[node name="head_collider" type="Area2D" parent="."]
position = Vector2(0, -11)
collision_layer = 0
collision_mask = 64

[node name="head_collision" type="CollisionShape2D" parent="head_collider"]
shape = SubResource("RectangleShape2D_hpat3")

[node name="jump_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_2l45l")
volume_db = -28.167

[node name="coyote_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_entered" from="head_collider" to="." method="_on_head_collider_body_entered"]
[connection signal="timeout" from="coyote_timer" to="." method="_on_coyote_timer_timeout"]
